common/connectionapi.h

#ifndef CONNECTIONAPI_H
#define CONNECTIONAPI_H

#ifdef __cplusplus
extern "C" {
#endif

// Wisp is POSIX-only; the exported-symbol set is controlled by libwisp.map.
#define CONN_API

typedef enum { PROTOCOL_ZMQ = 0 } Connection_Protocol;

typedef enum {
  SUCCESS = 0,
  ERROR_GENERIC = -1,
  ERROR_NO_CONNECTION = -2,
  ERROR_INVALID_ARGS = -3,
  ERROR_SEND_FAILED = -4,
  ERROR_BUFFER_TOO_SMALL = -5,
  ERROR_TIMEOUT = -6
} Connection_Error_Code;

typedef struct {
  const char* address;    // e.g. "tcp://127.0.0.1:5555"
  const char* client_id;  // e.g. "Camera-1"

  // A Connection_Protocol value, but typed int: a C caller can pass anything,
  // and reading an out-of-range value back as the enum would be undefined. The
  // Python and Ada bindings already treat this field as a plain int.
  int protocol;

  // Heartbeat interval, ms (default 3000). Keep it below the broker's 10 s
  // zombie timeout or the broker drops the client between heartbeats.
  int keepalive_time_ms;
  // Silence window, ms (default 10000): with no traffic from the broker for
  // this long the connection is reported offline. Values <= keepalive_time_ms
  // are corrected upward (a heartbeat round trip must fit inside the window).
  int keepalive_timeout_ms;
} Connection_Config;

#define CONNECTION_CONFIG_DEFAULT \
  { NULL, NULL, PROTOCOL_ZMQ, 3000, 10000 }

typedef void (*Message_Callback)(const char* topic, const char* data, int len, void* userData);

/* Where a message a callback wants may come from: published by a client of the
   same broker, or carried in across a peer link. A bitmask, so WISP_ORIGIN_ANY
   is the two together. See registerCallbackScoped. */
typedef enum { WISP_ORIGIN_LOCAL = 1, WISP_ORIGIN_MESH = 2, WISP_ORIGIN_ANY = 3 } Wisp_Origin;

typedef enum { WISP_LOG_DEBUG = 0, WISP_LOG_INFO = 1, WISP_LOG_WARNING = 2, WISP_LOG_ERROR = 3 } Wisp_Log_Level;

typedef void (*Log_Callback)(int level, const char* message, void* userData);

CONN_API int initConnection(const Connection_Config* config);
CONN_API void shutdownConnection();

// Message describing the most recent failure in a Wisp call on the calling
// thread, or "" if that call succeeded. Never returns NULL. The pointer stays
// valid until the next Wisp call on the same thread; copy it to keep it.
// Queries (isConnected, lastErrorMessage itself) never change it.
CONN_API const char* lastErrorMessage();

// 1 while the broker connection is up, 0 otherwise. initConnection returns
// before the connection finishes coming online.
CONN_API int isConnected();

// Blocks until the broker connection is up, for at most timeoutMs. Returns
// SUCCESS once connected and ERROR_TIMEOUT if not -- a timeout is not
// terminal, the connection keeps being retried in the background. Returns
// ERROR_NO_CONNECTION if initConnection was never called.
CONN_API int waitForConnection(int timeoutMs);

CONN_API int sendData(const char* topic, const char* data, int len);
CONN_API int sendMessage(const char* topic, const char* text);

// Move the broker to a different discovery cluster at runtime. `name` must be
// 1-64 bytes without '|' (ERROR_INVALID_ARGS otherwise) and the client must be
// connected (ERROR_NO_CONNECTION otherwise). Any connected client may do this;
// the receiving broker re-targets its beacons and re-meshes. No effect on a
// broker started without discovery.
CONN_API int setCluster(const char* name);

CONN_API int replyToSender(const char* data, int len);

/* Publish on `topic`, naming `replyTopic` for a responder to answer on - the
   non-blocking half of request/reply.

   Subscribe to `replyTopic` first, send, and handle the answer in that
   callback. sendRequest below does the same and then blocks until the answer
   arrives, which a message callback must not do (it would stall the thread that
   delivers the reply). Nothing here expires: the caller decides how long to
   wait and calls unregisterCallback when done.

   ERROR_INVALID_ARGS if `replyTopic` is empty, longer than 512 bytes, or starts
   with "__" - a broker drops reserved keys rather than routing them, so such a
   reply would be lost in silence. */
CONN_API int sendDataWithReply(const char* topic, const char* data, int len, const char* replyTopic);

/* Writes a reply topic unique to this request into `outBuffer`, derived from
   `requestTopic` and within the broker's 512-byte topic limit.

   Returns SUCCESS, or ERROR_BUFFER_TOO_SMALL with the required capacity in
   `outLen` (which includes the terminating NUL). */
CONN_API int makeReplyTopic(const char* requestTopic, char* outBuffer, int outBufferCap, int* outLen);

// Blocks the calling thread for up to timeoutMs waiting on the reply. On success, fills outBuffer
// (capacity outBufferCap) and outLen with the response. Returns ERROR_NO_CONNECTION when offline,
// ERROR_TIMEOUT when no reply arrived in time, and ERROR_BUFFER_TOO_SMALL when the response did
// not fit in outBufferCap (the reply is discarded; *outLen is set to the required capacity).
CONN_API int sendRequest(const char* topic, const char* payload, int payloadLen, char* outBuffer, int outBufferCap, int* outLen, int timeoutMs);

/* --- google.protobuf.Any payloads -------------------------------------------

   The C++ client packs protobuf messages into a `google.protobuf.Any` before
   publishing (see PROTOCOL.md, "Payload frame"), so a receiver can verify the
   type before parsing and a viewer can name a payload it has never seen. These
   entry points do the same for FFI callers: bring your own encoder (protobuf-c,
   a generated Ada codec, anything), pass the serialized message and its type
   name, and the envelope is written here - by the same code the C++ send path
   uses, so the bytes are identical either way.

   `typeName` is the full protobuf name without the url prefix, e.g.
   "broker.SystemStats". Nothing on this side of the ABI knows about protobuf
   beyond those two framing fields, so libwisp still links no protobuf a caller
   could collide with.

   The alternative is sendData with a raw payload, which stays supported: a
   receiver's tryUnpack falls back to parsing unframed bytes. What it cannot do
   then is tell a type mismatch from a valid message, and proto3 parsing is
   permissive enough that the difference matters. */
CONN_API int sendAny(const char* topic, const char* typeName, const char* value, int len);

// The same, naming a reply topic; the reply-topic rules of sendDataWithReply
// apply unchanged.
CONN_API int sendAnyWithReply(const char* topic, const char* typeName, const char* value, int len,
                              const char* replyTopic);

// Reply to the sender of the message being handled with a packed payload; only
// meaningful from inside a message callback.
CONN_API int replyToSenderAny(const char* typeName, const char* value, int len);

/* The blocking half: packs `value` the same way and then waits for the reply,
   which is written to `outBuffer` exactly as sendRequest writes it - raw, since
   a responder may answer with anything. Run it through readAny below to unpack
   a packed answer. Every error of sendRequest applies unchanged. */
CONN_API int sendRequestAny(const char* topic, const char* typeName, const char* value, int len, char* outBuffer,
                            int outBufferCap, int* outLen, int timeoutMs);

/* Reads the Any a payload frame carries: on SUCCESS `*outTypeName` and
   `*outValue` point into `payload` itself (not NUL-terminated, lengths in
   `*outTypeNameLen` / `*outValueLen`) and stay valid exactly as long as it
   does. Nothing is allocated and there is nothing to free. Both pointers are
   inside the buffer even when a length is zero - an Any whose message
   serializes to nothing carries no value field at all - so a caller may always
   compute an offset from them.

   ERROR_INVALID_ARGS when the bytes are not an Any with a
   "type.googleapis.com/" type url - which is also how a callback tells a packed
   payload from a raw one, since a broker forwards both. Takes no connection and
   may be called before initConnection. */
CONN_API int readAny(const char* payload, int len, const char** outTypeName, int* outTypeNameLen,
                     const char** outValue, int* outValueLen);

// userData is passed back to the callback and also identifies the registration
// for unregisterCallback.
CONN_API void registerCallback(const char* topic, Message_Callback callback, void* userData);

/* The same, triggered only by messages of the origins in `scope` (a Wisp_Origin
   bitmask); registerCallback above is this with WISP_ORIGIN_ANY.

   Registrations on one topic may differ: the broker is asked for their union
   and each callback is filtered on delivery, so a local-only handler stays
   local-only beside a wildcard subscription that wants everything. A scope of 0
   or one holding unknown bits widens to WISP_ORIGIN_ANY, as does talking to a
   broker that predates scopes - an unrecognized subscription is widened, never
   dropped. */
CONN_API void registerCallbackScoped(const char* topic, Message_Callback callback, void* userData, int scope);

// Removes the registrations on topic whose userData matches the value given to
// registerCallback. A callback already being dispatched when this returns may
// still complete, so resources it uses must not be freed immediately.
CONN_API void unregisterCallback(const char* topic, void* userData);

// Discard library log output below `level` (a Wisp_Log_Level value). The
// WISP_LOG_LEVEL environment variable ("debug", "info", "warn", "error") sets
// the starting level; unset logs everything. May be called before
// initConnection and adjusted at any time.
CONN_API void setLogLevel(int level);

// Route library log output into `callback` instead of stdout/stderr; pass NULL
// to restore the default output. The callback runs on internal library
// threads, so it must be thread-safe and should not block. `message` is only
// valid for the duration of the call; the level filter applies before it runs.
CONN_API void setLogHandler(Log_Callback callback, void* userData);

#ifdef __cplusplus
}
#endif

#endif  // CONNECTIONAPI_H